--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "rss-parser": "^3.13.0",
     "vis-network": "^9.1.9"
   },
   "devDependencies": {
