--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "d3": "^7.9.0",
     "next": "15.2.4",
     "react": "^19.0.0",
