--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.0.0",
     "d3": "^7.9.0",
     "next": "15.2.4",
